cuatro páginas del sitio completas

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-  <html>
+  <html lang="es">
     <head>
+
       <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -8,7 +9,7 @@
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
       <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
@@ -20,15 +21,15 @@
         <a href="#!" class="brand-logo brown-text text-darken-4">&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/logo.png" id="logo" >&nbsp;&nbsp;MUEBs</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse brown-text text-darken-4"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down menu">
-        <li class="active"><a class="brown-text text-darken-4" href="sass.html">Productos</a></li>
-        <li ><a class="brown-text text-darken-4" href="badges.html">¿Quiénes somos?</a></li>
-        <li><a class="brown-text text-darken-4" href="collapsible.html">Cantactanos</a></li>
+        <li class="active"><a class="brown-text text-darken-4" href="index.html"><b>Inicio</b></a></li>
+        <li ><a class="brown-text text-darken-4" href="somos.html"><b>¿Quiénes somos?</b></a></li>
+        <li><a class="brown-text text-darken-4" href="contacto.html"><b>Cantáctanos</b></a></li>
 
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a class="brown-text text-darken-4" href="sass.html">Productos</a></li>
-        <li><a class="brown-text text-darken-4" href="badges.html">¿Quienes somos?</a></li>
-        <li><a class="brown-text text-darken-4" href="collapsible.html">Contáctanos</a></li>
+        <li><a class="brown-text text-darken-4" href="index.html.html">Inicio</a></li>
+        <li><a class="brown-text text-darken-4" href="somos.html">¿Quienes somos?</a></li>
+        <li><a class="brown-text text-darken-4" href="contacto.html">Contáctanos</a></li>
       </ul>
       </div>
     </nav>
@@ -62,152 +63,205 @@
 <div class="container">
 <br>
   <div class="row">
-      <div class="col s6 offset-s3 center"><h3>Productos Destacados</<h3>
 
-      </div>
-        <div class="row">
-    <div class="card col s4">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="img/mu1.jpg">
+<br>
+      <div class="col s6 offset-s3 center"><h3 class=" cyan-text text-darken-4">Productos Destacados</<h3></div></div>
+<br><div class="linea"></div><br>
+
+
+    <div class="row">
+    <div class="card col m3 s6">
+    <div class="card-image waves-effect waves-block waves-light ">
+      <img class="activator" src="img/sillon1.png" >
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-      <p><a href="#">This is a link</a></p>
+      <span class="card-title activator grey-text text-darken-4">Belsh Sillón Individual de Polipropileno<i class="material-icons right">more_vert</i></span>
+      <p  class="brown-text text-lighten-2">$8,097.00 <del>$12,229.00</del></p>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      <span class="card-title grey-text text-darken-4">Belsh Sillón Individual de Polipropileno<i class="material-icons right">close</i></span>
+      <p>Polipropileno y Cojín. Para interior y exterior.</p>
     </div>
   </div>
-  <div class="card col s4">
+  <div class="card col m3 s6">
   <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="img/mu1.jpg">
+    <img class="activator" src="img/sillon2.png">
   </div>
   <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-    <p><a href="#">This is a link</a></p>
+    <span class="card-title activator grey-text text-darken-4">Nimu Sillón Individual de Encino y Tela<i class="material-icons right">more_vert</i></span>
+    <p class="brown-text text-lighten-2">$10,297.00 <del>$13,995.00</del></p>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    <span class="card-title grey-text text-darken-4">Nimu Sillón Individual de Encino y Tela<i class="material-icons right">close</i></span>
+    <p>Sillón de estructura de pino estufado. Hule espuma de 30kg en asiento y de 20kg en cuerpo. Cojines rellenos de hueca Premium.</p>
   </div>
 </div>
-<div class="card col s4">
+<div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/mu1.jpg">
+  <img class="activator" src="img/sillon3.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-  <p><a href="#">This is a link</a></p>
+  <span class="card-title activator grey-text text-darken-4">Barron Sillón Individual de Pino y Tela<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$9,299.00<del>$13,690.00</del></p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+  <span class="card-title grey-text text-darken-4">Barron Sillón Individual de Pino y Tela<i class="material-icons right">close</i></span>
+  <p>Sillón de estructura de pino con hule de espuma de 27 ''.La tela es muy suave al tacto y de fácil lavado en seco.</p>
 </div>
 </div>
-
+<div class="card col m3 s6">
+<div class="card-image waves-effect waves-block waves-light">
+  <img class="activator" src="img/silla1.png">
+</div>
+<div class="card-content">
+  <span class="card-title activator grey-text text-darken-4">Dalton Silla de Metal<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$3,599.00 <del>$5,686.00</del></p>
+</div>
+<div class="card-reveal">
+  <span class="card-title grey-text text-darken-4">Dalton Silla de Metal<i class="material-icons right">close</i></span>
+  <p>Silla de metal pintado y cuerda.</p>
+</div>
+</div>
 
   </div>
   <div class="row">
 
-    <div class="card col s4">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="img/mu1.jpg">
-    </div>
-    <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-      <p><a href="#">This is a link</a></p>
-    </div>
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-    </div>
-  </div>
-  <div class="card col s4">
+
+  <div class="card col m3 s6">
   <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="img/mu1.jpg">
+    <img class="activator" src="img/silla2.png">
   </div>
   <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-    <p><a href="#">This is a link</a></p>
+    <span class="card-title activator grey-text text-darken-4">Woody Arm de Abs Y Madera<i class="material-icons right">more_vert</i></span>
+    <p class="brown-text text-lighten-2">$1,398.00 <del>$1,952.00</del></p>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    <span class="card-title grey-text text-darken-4">Woody Arm de Abs Y Madera<i class="material-icons right">close</i></span>
+    <p>La silla Woody Arm está fabricada en plástico ABS, patas de madera sólida reforzadas con una estructura de cables de acero.</p>
   </div>
 </div>
-<div class="card col s4">
+<div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/mu1.jpg">
+  <img class="activator" src="img/jarro1.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-  <p><a href="#">This is a link</a></p>
+  <span class="card-title activator grey-text text-darken-4">Etche Set de 3 Jarrones de Cristal<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$2,898.00 <del>$3,690.00</del></p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+  <span class="card-title grey-text text-darken-4">Etche Set de 3 Jarrones de Cristal<i class="material-icons right">close</i></span>
+  <p>Conjunto de decantadores de cristal, Set de 3 Piezas</p>
 </div>
 </div>
-
-
+<div class="card col m3 s6">
+<div class="card-image waves-effect waves-block waves-light">
+  <img class="activator" src="img/mesa1.png">
+</div>
+<div class="card-content">
+  <span class="card-title activator grey-text text-darken-4">Balotri Mesa para 3 Pax de Madera<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$13,499.00 <del>$18,358.00</del></p>
+</div>
+<div class="card-reveal">
+  <span class="card-title grey-text text-darken-4">Balotri Mesa para 3 Pax de Madera<i class="material-icons right">close</i></span>
+  <p>Mesa de madera para tres personas. Vidrio de 6mm. Pintura de alta calidad. Bordes sellados con silicon.
+<br>
+Imagen del artista: Hin "flowers"<br>
+Técnica: giclée sobre canvas</p>
+</div>
+</div>
+<div class="card col m3 s6">
+<div class="card-image waves-effect waves-block waves-light">
+  <img class="activator" src="img/mesa2.png">
+</div>
+<div class="card-content">
+  <span class="card-title activator grey-text text-darken-4">Ollei Credenza de Cristal<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$5,199.00 <del>$8,214.00</del></p>
+</div>
+<div class="card-reveal">
+  <span class="card-title grey-text text-darken-4">Ollei Credenza de Cristal<i class="material-icons right">close</i></span>
+  <p>Credenza de cristal templado.</p>
+</div>
+</div>
   </div>
+
+
   <div class="row">
 
-    <div class="card col s4">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="img/mu1.jpg">
-    </div>
-    <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-      <p><a href="#">This is a link</a></p>
-    </div>
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-    </div>
-  </div>
-  <div class="card col s4">
-  <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="img/mu1.jpg">
-  </div>
-  <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-    <p><a href="#">This is a link</a></p>
-  </div>
-  <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-    <p>Here is some more information about this product that is only revealed once clicked on.</p>
-  </div>
-</div>
-<div class="card col s4">
+<div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/mu1.jpg">
+  <img class="activator" src="img/comoda1.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-  <p><a href="#">This is a link</a></p>
+  <span class="card-title activator grey-text text-darken-4">Cotal Cómoda de Madera<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$30,199.00 <del>$37,748.00</del></p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+  <span class="card-title grey-text text-darken-4">Cotal Cómoda de Madera<i class="material-icons right">close</i></span>
+  <p>3 cajones de buen tamaño con correderas ocultas marca Blum. estructura de madera y mdf con acabado en madera de guanacastle. La imagen de la puerta es un pasadizo que te llevará al camino de la imaginación, cada vez que la abras.</p>
+</div>
+</div>
+<div class="card col m3 s6">
+<div class="card-image waves-effect waves-block waves-light">
+  <img class="activator" src="img/arma1.png">
+</div>
+<div class="card-content">
+  <span class="card-title activator grey-text text-darken-4">Llano Armario de Madera <i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$4,799.00 <del>$7,582.00</del></p>
+</div>
+<div class="card-reveal">
+  <span class="card-title grey-text text-darken-4">Llano Armario de Madera <i class="material-icons right">close</i></span>
+  <p>Armario con tres puertas y tres cajones, fabricado en Dinamarca, listo para armar, de MDF laminado en papel con textura.
+<br>
+Para uso en interior.
+<br>
+Cuidados: Limpiar con paño seco, no usar solventes ni abrasivos</p>
 </div>
 </div>
 
+<div class="card col m3 s6">
+<div class="card-image waves-effect waves-block waves-light">
+  <img class="activator" src="img/cava1.png">
+</div>
+<div class="card-content">
+  <span class="card-title activator grey-text text-darken-4">Carranza Cava de Madera<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$35,299.00 <del>$44,123.00</del></p>
+</div>
+<div class="card-reveal">
+  <span class="card-title grey-text text-darken-4">Carranza Cava de Madera<i class="material-icons right">close</i></span>
+  <p>Cava con capacidad para 12 botellas de vino acostadas, repisas a distintos niveles, rieles de madera para colgar copas y cajón con correderas ocultas marca Blum. La cava es una estructura de madera y mdf con acabado en madera Teka Africana. 2 puertas de vidrio templado en color negro.</p>
+</div>
+</div>
+
+<div class="card col m3 s6">
+<div class="card-image waves-effect waves-block waves-light">
+  <img class="activator" src="img/lampara1.png">
+</div>
+<div class="card-content">
+  <span class="card-title activator grey-text text-darken-4">Lantanio Lámpara de Piso de Madera<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$6,599.00 <del>$9,964.00</del></p>
+</div>
+<div class="card-reveal">
+  <span class="card-title grey-text text-darken-4">Lantanio Lámpara de Piso de Madera<i class="material-icons right">close</i></span>
+  <p>Lámpara de pie madera acabado wengue, pantalla fabricada con alambre electro-soldado pintado, (powder coating) forrado con estireno y finalmente con tela. Para uso en interior. Limpiar con paño seco.</p>
+</div>
+</div>
+
+  </div><br><div class="linea"></div><br>
+</div>
+
+
+
+
+  <div class="carousel">
+    <a class="carousel-item" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"><div class="pie">
+      Novedades
+
+    </div></a>
+    <a class="carousel-item" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
+    <a class="carousel-item" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
+  </div>
 
   </div>
-</div>
-
-
-
-
-</div>
-
-
-
-
-
-
 
 
 
@@ -216,44 +270,43 @@
             <div class="container">
               <div class="row">
                 <div class="col l6 s12">
-                  <h5 class="black-text">Footer Content</h5>
-                  <p class="black-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                  <h5 class="black-text">Sígueme</h5><br>
+                  <div class="row">
+
+
+                  <a class="black-text text-lighten-4 col m1 offset-m1" href="https://www.facebook.com/jess.alatorre.1"><img src="img/face.ico" alt=""></a>
+
+                  <a class="black-text text-lighten-4 col m1 offset-m1" href="https://twitter.com/jessy4short"><img src="img/twitter.png" alt=""></a>
+
+                  <a class="black-text text-lighten-4 col m1 offset-m1" href="https://github.com/lajessie"><img src="img/github.ico" alt=""></a>
+                  </div>
+
                 </div>
+
+
+
                 <div class="col l4 offset-l2 s12">
-                  <h5 class="black-text">Links</h5>
+                  <h5 class="black-text">Enlaces rápidos</h5>
                   <ul>
-                    <li><a class="black-text text-lighten-3" href="#!">Link 1</a></li>
-                    <li><a class="black-text text-lighten-3" href="#!">Link 2</a></li>
-                    <li><a class="black-text text-lighten-3" href="#!">Link 3</a></li>
-                    <li><a class="black-text text-lighten-3" href="#!">Link 4</a></li>
+                    <li><a class="black-text text-lighten-3" href="contacto.html">Contacto</a></li>
+                    <li><a class="black-text text-lighten-3" href="somos.html">¿Quiénes somos?</a></li>
+                    <li><a class="black-text text-lighten-3" href="info.html">Información sobre la página web</a></li>
+
                   </ul>
                 </div>
               </div>
             </div>
             <div class="footer-copyright teal lighten-3 ">
 
-              <div class="container conte-fut teal lighten-3  black-text">
-              © 2014 Copyright Text
-              <a class="black-text text-lighten-4 right " href="#!">More Links</a>
+              <div class="container conte-fut teal lighten-3  black-text col m4 offset-m4 center">
+              Jessica Alatorre Flores © 2017
               </div>
             </div>
-          </footer>
-
-
-
-
-
-
-
-
-
-
-
-
+    </footer>
 
       <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-      <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
     </body>
   </html>
