página de salas completa

--- a/salas.html
+++ b/salas.html
@@ -37,7 +37,7 @@
 
 
     <div class="parallax-container">
-          <div class="parallax"><img src="img/back1.jpg">
+          <div class="parallax"><img src="img/sala-bar.jpg">
             <div class="container imagen-fondo">
             <br><br>
             <div class="row renglon">
@@ -65,35 +65,37 @@
   <div class="row">
 
 <br>
-      <div class="col s6 offset-s3 center"><h3 class=" cyan-text text-darken-4">Productos Destacados</<h3></div></div>
+      <div class="col s6 offset-s3 center"><h3 class=" cyan-text text-darken-4">Salas</<h3></div></div>
 <br><div class="linea"></div><br>
 
 
     <div class="row">
     <div class="card col m3 s6">
     <div class="card-image waves-effect waves-block waves-light ">
-      <img class="activator" src="img/sillon1.png" >
+      <img class="activator" src="img/sala1.png" >
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Belsh Sillón Individual de Polipropileno<i class="material-icons right">more_vert</i></span>
-      <p  class="brown-text text-lighten-2">$8,097.00 <del>$12,229.00</del></p>
+      <span class="card-title activator grey-text text-darken-4">Casablanca Sala Modular de Tela - Varios Colores<i class="material-icons right">more_vert</i></span>
+      <p  class="brown-text text-lighten-2">$ 21,397.00</p>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Belsh Sillón Individual de Polipropileno<i class="material-icons right">close</i></span>
-      <p>Polipropileno y Cojín. Para interior y exterior.</p>
+      <span class="card-title grey-text text-darken-4">Casablanca Sala Modular de Tela - Varios Colores<i class="material-icons right">close</i></span>
+      <p>El sillón está compuesto por 3 módulos que se pueden separar y acomodar de la manera que decide el usuario. Incluye un módulo de sillon de 2 plazas, un sillón individual y un sillón chaise.
+
+Sillón Modular estructura de pino estufado. Hule espuma de 30kg en asiento y de 20 kg en cuerpo. Cojines rellenos de hueca Premium. Tapizado en tela. Patas cromadas</p>
     </div>
   </div>
   <div class="card col m3 s6">
   <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="img/sillon2.png">
+    <img class="activator" src="img/sala2.png">
   </div>
   <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Nimu Sillón Individual de Encino y Tela<i class="material-icons right">more_vert</i></span>
-    <p class="brown-text text-lighten-2">$10,297.00 <del>$13,995.00</del></p>
+    <span class="card-title activator grey-text text-darken-4">Archi Sillón Individual de Pino y Tela <i class="material-icons right">more_vert</i></span>
+    <p class="brown-text text-lighten-2">$ 4,897.00</p>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Nimu Sillón Individual de Encino y Tela<i class="material-icons right">close</i></span>
-    <p>Sillón de estructura de pino estufado. Hule espuma de 30kg en asiento y de 20kg en cuerpo. Cojines rellenos de hueca Premium.</p>
+    <span class="card-title grey-text text-darken-4">Archi Sillón Individual de Pino y Tela <i class="material-icons right">close</i></span>
+    <p>Sillón Individual de estructura de pino estufado. Hule espuma de 30kg en asiento y de 20kg en cuerpo. Cojín relleno de hueca Premium. Tapizado en tela. </p>
   </div>
 </div>
 <div class="card col m3 s6">
@@ -111,15 +113,15 @@
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/silla1.png">
+  <img class="activator" src="img/sala3.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Dalton Silla de Metal<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$3,599.00 <del>$5,686.00</del></p>
+  <span class="card-title activator grey-text text-darken-4">Ibiza Sillón Modular de Pino y Tela<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$15,686.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Dalton Silla de Metal<i class="material-icons right">close</i></span>
-  <p>Silla de metal pintado y cuerda.</p>
+  <span class="card-title grey-text text-darken-4">Ibiza Sillón Modular de Pino y Tela <i class="material-icons right">close</i></span>
+  <p>El sillón está compuesto por 4 módulos que se pueden separar y acomodar de la manera que decide el usuario. Incluye un módulo de sillon de 2 plazas, un sillón individual, un sillón esquinero y un taburete.</p>
 </div>
 </div>
 
@@ -129,44 +131,41 @@
 
   <div class="card col m3 s6">
   <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="img/silla2.png">
+    <img class="activator" src="img/sala4.png">
   </div>
   <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Woody Arm de Abs Y Madera<i class="material-icons right">more_vert</i></span>
-    <p class="brown-text text-lighten-2">$1,398.00 <del>$1,952.00</del></p>
+    <span class="card-title activator grey-text text-darken-4">Leviato Sillón de 3 Plazas de Parota<i class="material-icons right">more_vert</i></span>
+    <p class="brown-text text-lighten-2">$ 19,999.00</p>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Woody Arm de Abs Y Madera<i class="material-icons right">close</i></span>
-    <p>La silla Woody Arm está fabricada en plástico ABS, patas de madera sólida reforzadas con una estructura de cables de acero.</p>
+    <span class="card-title grey-text text-darken-4">Leviato Sillón de 3 Plazas de Parota<i class="material-icons right">close</i></span>
+    <p>Sillón de estructura de pino estufado. Hule espuma de 30kg en asiento y de 20kg en cuerpo. Cojines rellenos de hueca Premium.</p>
   </div>
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/jarro1.png">
+  <img class="activator" src="img/sala5.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Etche Set de 3 Jarrones de Cristal<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$2,898.00 <del>$3,690.00</del></p>
+  <span class="card-title activator grey-text text-darken-4">Ibiza Sillón de 2 Plazas de Pino y Tela<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$6,690.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Etche Set de 3 Jarrones de Cristal<i class="material-icons right">close</i></span>
-  <p>Conjunto de decantadores de cristal, Set de 3 Piezas</p>
+  <span class="card-title grey-text text-darken-4">Ibiza Sillón de 2 Plazas de Pino y Tela<i class="material-icons right">close</i></span>
+  <p>Sillón de estructura de pino estufado. Hule espuma de 24kg en asiento y de 20kg en cuerpo.</p>
 </div>
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/mesa1.png">
+  <img class="activator" src="img/sala6.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Balotri Mesa para 3 Pax de Madera<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$13,499.00 <del>$18,358.00</del></p>
+  <span class="card-title activator grey-text text-darken-4">Ibiza Sillón Esquinero de Pino y Tela<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$3,499.00 </p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Balotri Mesa para 3 Pax de Madera<i class="material-icons right">close</i></span>
-  <p>Mesa de madera para tres personas. Vidrio de 6mm. Pintura de alta calidad. Bordes sellados con silicon.
-<br>
-Imagen del artista: Hin "flowers"<br>
-Técnica: giclée sobre canvas</p>
+  <span class="card-title grey-text text-darken-4">Ibiza Sillón Esquinero de Pino y Tela<i class="material-icons right">close</i></span>
+  <p>Sillón de estructura de pino estufado. Hule espuma de 24kg en asiento y de 20kg en cuerpo.</p>
 </div>
 </div>
 <div class="card col m3 s6">
@@ -189,60 +188,56 @@ Técnica: giclée sobre canvas</p>
 
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/comoda1.png">
+  <img class="activator" src="img/sala7.jpg">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Cotal Cómoda de Madera<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$30,199.00 <del>$37,748.00</del></p>
+  <span class="card-title activator grey-text text-darken-4">Dellen Sillón de 2 Plazas Estilo Moderno<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 14,099.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Cotal Cómoda de Madera<i class="material-icons right">close</i></span>
-  <p>3 cajones de buen tamaño con correderas ocultas marca Blum. estructura de madera y mdf con acabado en madera de guanacastle. La imagen de la puerta es un pasadizo que te llevará al camino de la imaginación, cada vez que la abras.</p>
+  <span class="card-title grey-text text-darken-4">Dellen Sillón de 2 Plazas Estilo Moderno<i class="material-icons right">close</i></span>
+  <p>El sillón Dellen tiene una estructura interna de madera de pino con ensamble en espiga, un ensamble que impide la fatiga de la estructura evitando que el mueble rechine o incluso se pueda llegar a fracturar. El cuerpo es de hule espuma la cual tiene una densidad de más de 30kg, siendo 24kg el estándar sugerido. Está tapizado con una tela de tejido muy cerrado que evita la rápida penetración de líquidos, tiene un forro interior que hace adherencia al delcrón, un laminado acolchado de fibras de poliéster que cubre toda la espuma y evita que se arrugue de manera permanente.</p>
 </div>
 </div>
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/arma1.png">
+  <img class="activator" src="img/sala8.jpg">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Llano Armario de Madera <i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$4,799.00 <del>$7,582.00</del></p>
+  <span class="card-title activator grey-text text-darken-4">Dellen Sillón Individual de Estilo Moderno <i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 9,499.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Llano Armario de Madera <i class="material-icons right">close</i></span>
-  <p>Armario con tres puertas y tres cajones, fabricado en Dinamarca, listo para armar, de MDF laminado en papel con textura.
-<br>
-Para uso en interior.
-<br>
-Cuidados: Limpiar con paño seco, no usar solventes ni abrasivos</p>
+  <span class="card-title grey-text text-darken-4">Dellen Sillón Individual de Estilo Moderno <i class="material-icons right">close</i></span>
+  <p>El sillón Dellen tiene una estructura interna de madera de pino con ensamble en espiga, un ensamble que impide la fatiga de la estructura evitando que el mueble rechine o incluso se pueda llegar a fracturar. El cuerpo es de hule espuma la cual tiene una densidad de más de 30kg, siendo 24kg el estándar sugerido. Está tapizado con una tela de tejido muy cerrado que evita la rápida penetración de líquidos, tiene un forro interior que hace adherencia al delcrón, un laminado acolchado de fibras de poliéster que cubre toda la espuma y evita que se arrugue de manera permanente.</p>
 </div>
 </div>
 
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/cava1.png">
+  <img class="activator" src="img/sala10.jpg">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Carranza Cava de Madera<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$35,299.00 <del>$44,123.00</del></p>
+  <span class="card-title activator grey-text text-darken-4">Chaleur Sofá Cama de Madera de Pino<i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$ 27,999.00 </p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Carranza Cava de Madera<i class="material-icons right">close</i></span>
-  <p>Cava con capacidad para 12 botellas de vino acostadas, repisas a distintos niveles, rieles de madera para colgar copas y cajón con correderas ocultas marca Blum. La cava es una estructura de madera y mdf con acabado en madera Teka Africana. 2 puertas de vidrio templado en color negro.</p>
+  <span class="card-title grey-text text-darken-4">Chaleur Sofá Cama de Madera de Pino<i class="material-icons right">close</i></span>
+  <p>El sofá Chaleur tiene una estructura interna de madera de pino con ensamble en espiga, un ensamble que impide la fatiga de la estructura evitando que el mueble rechine o incluso se pueda llegar a fracturar. El cuerpo es de hule espuma la cual tiene una densidad de más de 30kg, siendo 24kg el estándar sugerido. Está tapizado con una tela de tejido muy cerrado que evita la rápida penetración de líquidos, tiene un forro interior que hace adherencia al delcrón, un laminado acolchado de fibras de poliéster que cubre toda la espuma y evita que se arrugue de manera permanente.</p>
 </div>
 </div>
 
 <div class="card col m3 s6">
 <div class="card-image waves-effect waves-block waves-light">
-  <img class="activator" src="img/lampara1.png">
+  <img class="activator" src="img/salas9.png">
 </div>
 <div class="card-content">
-  <span class="card-title activator grey-text text-darken-4">Lantanio Lámpara de Piso de Madera<i class="material-icons right">more_vert</i></span>
-  <p class="brown-text text-lighten-2">$6,599.00 <del>$9,964.00</del></p>
+  <span class="card-title activator grey-text text-darken-4">Liena Sofá de 3 Plazas Combinables <i class="material-icons right">more_vert</i></span>
+  <p class="brown-text text-lighten-2">$$ 17,099.00</p>
 </div>
 <div class="card-reveal">
-  <span class="card-title grey-text text-darken-4">Lantanio Lámpara de Piso de Madera<i class="material-icons right">close</i></span>
-  <p>Lámpara de pie madera acabado wengue, pantalla fabricada con alambre electro-soldado pintado, (powder coating) forrado con estireno y finalmente con tela. Para uso en interior. Limpiar con paño seco.</p>
+  <span class="card-title grey-text text-darken-4">Liena Sofá de 3 Plazas Combinables de Tela <i class="material-icons right">close</i></span>
+  <p>El sofá tiene una estructura interna fabricada de madera de pino en espiga, un ensamble que impide la fatiga de la estructura evitando que el mueble rechine o incluso se pueda llegar a fracturar. El cuerpo es de hule espuma de alta densidad. Está tapizado con una tela de tejido muy cerrado que evita la rápida penetración de líquidos, tiene un forro interior que hace adherencia al delcrón, un laminado acolchado de fibras de poliéster que cubre toda la espuma y evita que se arrugue de manera permanente. Las patas son de acero cromado.</p>
 </div>
 </div>
 
